Implemented Path Transformations in Android and iOS

--- a/Xamarin.Forms.Platform.iOS/Xamarin.Forms.Platform.iOS.csproj
+++ b/Xamarin.Forms.Platform.iOS/Xamarin.Forms.Platform.iOS.csproj
@@ -248,6 +248,7 @@
     <Compile Include="Renderers\ShapeRenderer.cs" />
     <Compile Include="Extensions\GeometryExtensions.cs" />
     <Compile Include="Extensions\DoubleCollectionExtensions.cs" />
+    <Compile Include="Extensions\TransformExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\StringResources.ar.resx" />
