--- a/Xamarin.Forms.Platform.Android/Xamarin.Forms.Platform.Android.csproj
+++ b/Xamarin.Forms.Platform.Android/Xamarin.Forms.Platform.Android.csproj
@@ -76,5 +76,8 @@
     <Compile Update="Extensions\DoubleCollectionExtensions.cs">
       <SubType></SubType>
     </Compile>
+    <Compile Update="Extensions\TransformExtensions.cs">
+      <SubType></SubType>
+    </Compile>
   </ItemGroup>
 </Project>
